# aosc-nanny

./: .gitignore  CMakeLists.txt  Makefile  README.md  nanny.sh
po/: messages.pot  zh_CN.po  zh_TW.po
po/zh_CN/: aosc-nanny.mo  aosc-nanny.po
po/zh_TW/: aosc-nanny.mo  aosc-nanny.po
src/: CMakeLists.txt  main.cpp
